--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR code challenge</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="container">
-        <img src="image-qr-code.png" alt="QR Code" width="250px">
-        <h5 class="text">Improve your front-end skills by building projects </h5>
-        <p class="para">scan the QR code to visit frontend mentor and take your coding skills to the next level</p>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <a href="https://FrontendMentor.io" target="_blank"
+          ><img src="image-qr-code.png" alt="QR Code" width="250px"
+        /></a>
+        <h2 class="text">Improve your front-end skills by building projects</h2>
+        <p class="para">
+          scan the QR code to visit frontend mentor and take your coding skills
+          to the next level
+        </p>
       </div>
-</body>
+    </main>
+  </body>
 </html>
